<resources>
    <string name="app_name">SQlite Example</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_name">User Name</string>
    <string name="pass">*********</string>
    <string name="sign_up_Button">SIGN UP</string>
    <string name="email">abc@xyz.com</string>
    <string name="add_user">Add User</string>
    <string name="view_user">View User</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="enter_the_user_name_to_find">Enter the User Name to find</string>
    <string name="enter_the_user_name_to_delete">Enter the User Name to Delete</string>
    <string name="enter_the_user_name_to_update">Enter the User Name to Update</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
</resources>
